--- a/package.json
+++ b/package.json
@@ -1,15 +1,8 @@
 {
   "dependencies": {
-    "openai": "^4.76.3"
-  },
-  "name": "zeromonk",
-  "version": "1.0.0",
-  "main": "index.js",
-  "devDependencies": {},
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "description": ""
+    "axios": "^1.7.9",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2"
+  }
 }
